installServer/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: vps-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vps
spec:
  hosts:
    - "*"
  gateways:
    - vps-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: alternating-rabbit-proxy-replicaset
            port:
              number: 8989
          weight: 100
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: alternating-rabbit-proxy
spec:
  host: alternating-rabbit-proxy-replicaset
